# dot-editor

./: AUTHORS  CMakeLists.txt  CMakeLists.txt.autosave  COPYING  INSTALL  LICENSE  NEWS  README  README.md  config.h.in  index.html
distrib/1.1.1/source/: dot-editor-1.1.1-Source.tar.bz2
editor/: CMakeLists.txt  main.cc
plugins/: CMakeLists.txt
plugins/automata/: CMakeLists.txt  automatacomobj.cc  automatacomobj.h  cmnautomimpl.cc  cmnautomimpl.h  de-plgin-automata.cc  de-plgin-automata.h  dfautomata.cc  dfautomata.h  enfautomata.cc  enfautomata.h  nfautomata.cc  nfautomata.h
